# levarware_gen3

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/arm/thunder_nrf9160/: thunder_nrf9160.dts  thunder_nrf9160_common-pinctrl.dtsi  thunder_nrf9160_common.dts  thunder_nrf9160_defconfig  thunder_nrf9160_ns_defconfig
src/: main.c
src/apps/: CMakelists.txt  app_shell.c
src/bsp/: CMakelists.txt  led.c  led.h  modem.c  modem.h  power_reg.c  power_reg.h  sys_wrapper.c  sys_wrapper.h
src/cell/: CMakelists.txt  lte_connect_mgr.c  lte_connect_mgr.h  lte_internal.h
src/config/: CMakelists.txt  config.c  config.h  config_internal.h  config_utils.c
src/connectors/: CMakelists.txt  aws_callbacks.c  aws_connector.c  aws_connector.h  aws_internal.h
src/encoding/: CMakelists.txt  aws_decoding.c  aws_encoding.h
src/sensors/: CMakelists.txt  battery.c  sensor_mgr.c  sensor_mgr.h
